(executable
 (promote (until-clean))
 (name demo)
 (libraries dyp)
 (flags :standard -w -27-32))

(rule
 (targets parser.mli parser.ml)
 (deps
  (:exe %{project_root}/dypgen/dypgen.exe)
  (:src parser.dyp)
  (:int parse_tree.ml)
  %{project_root}/dyplib/dyp.cmi)
 (action
  (progn
   (run %{ocamlc} -I %{project_root}/dyplib -c %{int})
   (run
    %{exe}
    --no-undef-nt
    --ocamlc
    "-rectypes -I %{project_root}/dyplib"
    %{src}))))

(cram
 (deps
  (:exe demo.exe)
  (:input
   (glob_files test*))))
