(executable
 (promote (until-clean))
 (name forest)
 (modules_without_implementation forest_parser_debug parse_tree)
 (libraries dyp)
 (flags :standard -w -27-32))

(rule
 (targets forest_parser.mli forest_parser.ml)
 (deps
  (:exe %{project_root}/dypgen/dypgen.exe)
  (:src forest_parser.dyp)
  (:int parse_tree.mli)
  %{project_root}/dyplib/dyp.cmi)
 (action
  (progn
   (run %{ocamlc} -I %{project_root}/dyplib -c %{int})
   (run %{exe} --ocamlc "-rectypes -I %{project_root}/dyplib" %{src}))))
