(executable
 (promote (until-clean))
 (name global_data)
 (libraries dyp)
 (flags -w -27-32))

(rule
 (targets global_data_parser.mli global_data_parser.ml)
 (deps
  (:exe %{project_root}/dypgen/dypgen.exe)
  (:src global_data_parser.dyp)
  %{project_root}/dyplib/dyp.cmi)
 (action
  (run %{exe} --ocamlc "-rectypes -I %{project_root}/dyplib" %{src})))
