(executable
 (promote (until-clean))
 (name local_data)
 (libraries dyp)
 (flags -w -27-32))

(rule
 (targets local_data_parser.mli local_data_parser.ml)
 (deps
  (:exe %{project_root}/dypgen/dypgen.exe)
  (:src local_data_parser.dyp)
  (:int parse_tree.ml)
  %{project_root}/dyplib/dyp.cmi)
 (action
  (progn
   (run %{ocamlc} -I %{project_root}/dyplib -c %{int})
   (run %{exe} --ocamlc "-rectypes -I %{project_root}/dyplib" %{src}))))
