(executable
 (promote (until-clean))
 (name merge_tp)
 (libraries dyp)
 (flags -w -27-32))

(rule
 (targets merge_tp_parser.mli merge_tp_parser.ml)
 (deps
  (:exe %{project_root}/dypgen/dypgen.exe)
  (:src merge_tp_parser.dyp)
  (:int parse_tree.ml)
  %{project_root}/dyplib/dyp.cmi)
 (action
  (progn
   (run %{ocamlc} -I %{project_root}/dyplib -c %{int})
   (run %{exe} --ocamlc "-rectypes -I %{project_root}/dyplib" %{src}))))
