(executable
 (promote (until-clean))
 (name position)
 (libraries dyp)
 (flags :standard -w -27-32))

(rule
 (targets position_parser.mli position_parser.ml)
 (deps
  (:exe %{project_root}/dypgen/dypgen.exe)
  (:src position_parser.dyp)
  (:int parse_tree.ml)
  %{project_root}/dyplib/dyp.cmi)
 (action
  (progn
   (run %{ocamlc} -I %{project_root}/dyplib -c %{int})
   (run
    %{exe}
    --merge-warning
    --ocamlc
    "-rectypes -I %{project_root}/dyplib"
    %{src}))))

(cram
 (deps
  (:exe position.exe)
  (:input input)))
